@@ -6,10 +6,16 @@
         * A big cleanup in struct naming
         * Move some functions around to make more of them static, this reduces
           the binary size and load times.
-		* Remove some leftovers from restoring encoded scripts which only create
-		  overhead without the loader.
+        * Remove some leftovers from restoring encoded scripts which only create
+          overhead without the loader.
         * Clean up the session handler, removed old code for php < 4.3. 
-		  
+        * Fixed detection of SysV IPC shared memory and made anonymous mmap 
+          the first selected type. This makes the behaviour of rc1 the 
+          default. anonymous mmap doens't have the problem of shmmax. SysVIPC is 
+          still available!
+        * Fixed some of the detection test in the configure script that probably
+          never worked.
+
 2006-07-29  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Use php realpath directly without wrapper, TSRM implements the realpath cache
